--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 {% block content %}
 <div class="container">
   <div class="jumbotron">
-    <h1>Welcome to your new project!</h1>
-    <p>Replace this message with your own content in <code>{{ PROJECT_PATH }}/index.html</code>.</p>
-    <p>Learn more on the <a href="_example.html">example page</a>.</p>
-  </div>
+    <h1>A campus cancer: Jaywalking at 14th and Vine</h1>
+    <h2> By: Eric Neeman, Michael Cornwell, Laurel Preuit and Daniel Wheaton</h2>
+    <p> Starting on Oct. 26, 2015, University of Nebraska-Lincoln police started a campaign informing students of the legal penalties of jaywalking. As UNLPD Sgt. Jerry Plessel said in an email, UNLPD had received numerous complaints from construction drivers, bus drivers and UNL faculty and staff members. The intersection of 14th and Vine is particularly dangerous at the moment, as the construction of the new College of Business Administration has removed a sidewalk that pedestrians can use. It also forces buses on routes 24 and 25 to share a single stop.</p>  
+      <img src="http://129.93.113.20/axis-cgi/mjpg/video.cgi?resolution=800x450&amp;dummy=1449255353674" height="450" width="800" style="margin: auto;" alt="Camera Image">
+    <br>
+      <p>In order to truly quantify how often students jaywalked, we watched the live video feed of the intersection from Nov. 30, to Dec. 4 during class periods. The full data we collected is below. </p>
+      
+<script id="infogram_0_14th_and_vine-809" title="14th and Vine" src="//e.infogr.am/js/embed.js?PdN" type="text/javascript"></script><div style="width:100%;padding:8px 0;font-family:Arial;font-size:13px;line-height:15px;text-align:center;"><a target="_blank" href="https://infogr.am/14th_and_vine-809" style="color:#989898;text-decoration:none;">14th and Vine</a><br><a style="color:#989898;text-decoration:none;" href="http://charts.infogr.am/bar-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=bar_chart" target="_blank">Create bar charts</a></div>
+ 
+<h3>Key stats</h3>  
+    <ul>
+    <li>22 percent of pedestrians jaywalk</li>
+    <li>Jaywalking is positively correlated with traffic</li>
+    <li>Anywhere from 6 to 50 percent of pedestrians jaywalk</li></ul>
+    </div>
 </div>
 {% endblock content %}
 
